fixing a paragraph header typo

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div id="googleMap" style="width:500px;height:350px;"></div>
           
           <h3>
-            <a id="why-power-conservative-routes" class="anchor" href="#why-power-conservative-routes" aria-hidden="true"><span class="octicon octicon-link"></span></a>What are Power Conservative Routes?</h3>
+            <a id="why-power-conservative-routes" class="anchor" href="#why-power-conservative-routes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why Power Conservative Routes?</h3>
           </h3>
 	<p>Power conservative routes are the next step in the electric vehicle revolution. One of the most prominent shortcomings of driving an electric vehicle is being limited by places the vehicle can be recharged. This makes getting as far as possible on each vehicle charge a priority. Besides, it saves energy! Isn't that the whole point of an electric vehicle?</p>
         
