another typo fix

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
          <h3>
             <a id="google-maps-api" class="anchor" href="#google-maps-api" aria-hidden="true"><span class="octicon octicon-link"></span></a>Using the Google Maps API</h3>
          </h3>  
-         <p>The google maps API is an essential piece of makingn this project possible. All of the route data and ability to embed maps into the page comes from this API.</p>
+         <p>The google maps API is an essential piece of making this project possible. All of the route data and ability to embed maps into the page comes from this API.</p>
           <div id="googleMap" style="width:500px;height:350px;"></div>
           
           <h3>
