--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
             <a id="what-are-power-conservative-routes" class="anchor" href="#what-are-power-conservative-routes" aria-hidden="true"><span class="octicon octicon-link"></span></a>What are Power Conservative Routes?</h3>
           </h3>
 	<p>Power conservative routes are navigation routes with the power consumed by an electric vehicle battery factored in. Using google maps and live data from an electric vehicle driving around Logan, UT, the routes are both utility and experiment. This project uses power consumption data at various GPS coordinates to determine which route will use the least power.</p>
-        
+        <p>UPDATE: Because the live data is not yet available, I have opted to model the battery usage in watt-hours/mile for a Tesla Model S (Data is easier to find for this vehicle, apparently they're popular or something.) I opted to use this model of the battery usage: https://my.teslamotors.com/no_NO/forum/forums/whmile-equation</p>
+        <img src="http://klevins.smugmug.com/HDR/i-QKKWkCL/0/M/Correlation2-M.jpg" style="width: 500px;"></img>
          <h3>
             <a id="google-maps-api" class="anchor" href="#google-maps-api" aria-hidden="true"><span class="octicon octicon-link"></span></a>Using the Google Maps API</h3>
          </h3>  
-         <p>The google maps API is an essential piece of making this project possible. All of the route data and ability to embed maps into the page comes from this API.</p>
+         <p>The google maps API is an essential piece of making this project possible. All of the route data and ability to embed maps into the page comes from this API. Once start and end locations are entered into the page, the API is called and an array of possible routes are returned. The goal is to calculate the watt-hours per route based on the battery usage model.</p>
           <div id="googleMap" style="width:500px;height:350px;"></div>
           
           <h3>
