wrapping link in link tag

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a id="what-are-power-conservative-routes" class="anchor" href="#what-are-power-conservative-routes" aria-hidden="true"><span class="octicon octicon-link"></span></a>What are Power Conservative Routes?</h3>
           </h3>
 	<p>Power conservative routes are navigation routes with the power consumed by an electric vehicle battery factored in. Using google maps and live data from an electric vehicle driving around Logan, UT, the routes are both utility and experiment. This project uses power consumption data at various GPS coordinates to determine which route will use the least power.</p>
-        <p>UPDATE: Because the live data is not yet available, I have opted to model the battery usage in watt-hours/mile for a Tesla Model S (Data is easier to find for this vehicle, apparently they're popular or something.) I opted to use this model of the battery usage: https://my.teslamotors.com/no_NO/forum/forums/whmile-equation</p>
+        <p>UPDATE: Because the live data is not yet available, I have opted to model the battery usage in watt-hours/mile for a Tesla Model S (Data is easier to find for this vehicle, apparently they're popular or something.) I opted to use this model of the battery usage: <a href="https://my.teslamotors.com/no_NO/forum/forums/whmile-equation">my.teslamotors.com/no_NO/forum/forums/whmile-equation</a></p>
         <img src="http://klevins.smugmug.com/HDR/i-QKKWkCL/0/M/Correlation2-M.jpg" style="width: 500px;"></img>
          <h3>
             <a id="google-maps-api" class="anchor" href="#google-maps-api" aria-hidden="true"><span class="octicon octicon-link"></span></a>Using the Google Maps API</h3>
